--- a/styles/style.css
+++ b/styles/style.css
@@ -99,6 +99,37 @@
     /* 162.5% */
 }
 
+.banner-form {
+    margin: 0 11.5rem;
+    border-radius: .5rem;
+    background: rgba(255, 255, 255, 0.30);
+    padding: 1rem;
+    display: flex;
+    margin-bottom: 6.6rem;
+}
+
+.banner-form input,
+select,button {
+    border-radius: .5rem;
+    background: #FFF;
+    border: none;
+    color: rgba(19, 19, 24, 0.50);
+    text-align: center;
+    font-size: 1rem;
+    font-weight: 400;
+    padding: 1rem 1rem 1rem 1rem;
+    margin-right: 1.5rem;
+    outline: none;
+    width: 10rem;
+
+}
+
+.banner-form .find {
+    background: #FF5400;
+    color: #FFF;
+    font-weight: 700;
+}
+
 
 @media screen and (max-width:600px) {
     .nav-title {
