--- a/styles/style.css
+++ b/styles/style.css
@@ -11,7 +11,6 @@
     width: 81.35%;
     max-width: 73.125rem;
     margin: 0 auto;
-    ;
 }
 
 
@@ -78,7 +77,8 @@
 
 .banner-text {
     text-align: center;
-    padding: 6.625rem 15.7rem 3rem;
+    padding: 3rem;
+    padding-top: 5rem;
 
 }
 
@@ -100,16 +100,20 @@
 }
 
 .banner-form {
-    margin: 0 11.5rem;
+    margin: 0 11rem;
     border-radius: .5rem;
     background: rgba(255, 255, 255, 0.30);
-    padding: 1rem;
-    display: flex;
+    background-size: contain;
     margin-bottom: 6.6rem;
+    padding: .25rem;
 }
 
+/* form {
+    padding: .25rem;
+} */
 .banner-form input,
-select,button {
+select,
+button {
     border-radius: .5rem;
     background: #FFF;
     border: none;
@@ -121,6 +125,7 @@ select,button {
     margin-right: 1.5rem;
     outline: none;
     width: 10rem;
+    margin-bottom: .2rem;
 
 }
 
@@ -138,5 +143,37 @@ select,button {
 
     .nav-title {
         margin-right: 3rem;
+    }
+
+    .banner-text {
+        padding: .5rem;
+    }
+
+    .banner-text h1 {
+        font-size: 1.2rem;
+        margin-top: 2rem;
+    }
+
+    .banner-text p {
+        font-size: .85rem;
+    }
+
+    .banner-form {
+        margin: 0;
+    }
+
+    .banner-form * {
+        display: block;
+        margin-top: 1rem;
+    }
+
+    .banner-form {
+        margin: 0 10rem;
+    }
+
+    .banner-form input,
+    select,
+    button{
+        font-size: 1rem;
     }
 }
