--- a/styles/style.css
+++ b/styles/style.css
@@ -108,9 +108,6 @@
     padding: .25rem;
 }
 
-/* form {
-    padding: .25rem;
-} */
 .banner-form input,
 select,
 button {
@@ -156,6 +153,7 @@ button {
 
     .banner-text p {
         font-size: .85rem;
+        margin-bottom: 1rem;
     }
 
     .banner-form {
@@ -168,12 +166,14 @@ button {
     }
 
     .banner-form {
-        margin: 0 10rem;
+       margin: 0 5rem;
     }
 
     .banner-form input,
     select,
     button{
         font-size: 1rem;
+        padding: .25rem;
+        width: 8rem;
     }
 }
