--- a/styles/style.css
+++ b/styles/style.css
@@ -132,6 +132,51 @@ button {
     font-weight: 700;
 }
 
+/* popular section styles  */
+.popular {
+    margin-top: 8rem;
+}
+
+.popular-main {
+    display: flex;
+    align-items: flex-start;
+    gap: 1rem;
+}
+
+.popular-text h2 {
+    color: #131318;
+    font-size: 2.5rem;
+    font-weight: 800;
+    margin-bottom: 1.3rem;
+}
+
+.popular-text p {
+    color: rgba(19, 19, 24, 0.70);
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.3rem;
+    /* 162.5% */
+    margin-bottom: 2rem;
+}
+
+.popular-image img {
+    width: 100%;
+}
+
+.read {
+    border-radius: .5rem;
+    background: #FF5400;
+    color: #FFF;
+    text-align: center;
+    font-size: 1.2rem;
+    font-weight: 800;
+    line-height: normal;
+}
+
+.fa-circle {
+    font-size: .65rem;
+    color: rgba(19, 19, 24, 0.70);
+}
 
 @media screen and (max-width:600px) {
     .nav-title {
@@ -166,12 +211,12 @@ button {
     }
 
     .banner-form {
-       margin: 0 5rem;
+        margin: 0 5rem;
     }
 
     .banner-form input,
     select,
-    button{
+    button {
         font-size: 1rem;
         padding: .25rem;
         width: 8rem;
