--- a/styles/style.css
+++ b/styles/style.css
@@ -135,6 +135,7 @@ button {
 /* popular section styles  */
 .popular {
     margin-top: 8rem;
+    margin-bottom: 6.25rem;
 }
 
 .popular-main {
@@ -143,14 +144,14 @@ button {
     gap: 1rem;
 }
 
-.popular-text h2 {
+.popular-text h2, .destination-text h2 {
     color: #131318;
     font-size: 2.5rem;
     font-weight: 800;
     margin-bottom: 1.3rem;
 }
 
-.popular-text p {
+.popular-text p, .destination-text p {
     color: rgba(19, 19, 24, 0.70);
     font-size: 1rem;
     font-weight: 400;
@@ -177,6 +178,58 @@ button {
     font-size: .65rem;
     color: rgba(19, 19, 24, 0.70);
 }
+
+/* destination section styles */
+
+.destination-text {
+    text-align: center;
+}
+
+.destination-container {
+    display: grid;
+    gap: 1rem;
+    grid-template-columns: repeat(12,1fr);
+    grid-template-rows: repeat(3,1fr);
+}
+
+.destination-1{
+    grid-column: 1 / span 6;
+    grid-row: 1 / span 6;
+}
+
+.destination-2{
+    grid-column: 7 / span 6;
+    grid-row:1 / span 1;
+}
+
+.destination-3 {
+    grid-column: 1 / span 3;
+    grid-row: 2 / span 1;
+}
+
+.destination-4 {
+    grid-column: 5 / span 6;
+    grid-row: 2 / span 1;
+}
+
+.destination-5{
+    grid-column: 10 / span 3;
+    grid-row: 2 / span 1;
+}
+
+.destination-6 {
+    grid-column: 1 / span 5;
+    grid-row: 3 / span 1;
+}
+
+.destination-7{
+    grid-column: 6 / span 7 ;
+    grid-row: 3 / span 1;
+}
+
+
+
+
 
 @media screen and (max-width:600px) {
     .nav-title {
