--- a/styles/style.css
+++ b/styles/style.css
@@ -292,9 +292,22 @@ h2 {
 }
 
 /* deal section styles */
+
+.deal-section {
+    margin-top: 5rem;
+}
 .deal-section h2,
 .deal-p {
     text-align: center;
+}
+
+.deal-p {
+    color: rgba(19, 19, 24, 0.70);
+    text-align: center;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.2rem;
+    /* 162.5% */
 }
 
 .deal {
@@ -330,24 +343,30 @@ h2 {
     display: flex;
     justify-content: flex-end;
     align-items: center;
+    margin-top: 3rem;
 }
+
 .deal-container-1 .deal {
     margin-right: 2.25rem;
 }
+
 .deal-container-2 {
     background-image: url('../Images/Group 40.png');
     display: flex;
     align-items: center;
 }
-.deal-container-2 .deal{
+
+.deal-container-2 .deal {
     margin-left: 2rem;
 }
+
 .deal-container-3 {
     background-image: url('../Images/Group 39.png');
     display: flex;
     align-items: center;
-    justify-content:flex-end;
+    justify-content: flex-end;
 }
+
 .deal-container-3 .deal {
     margin-right: 2.25rem;
 }
@@ -359,6 +378,8 @@ h2 {
 /* place section styles  */
 .place-container {
     display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
     margin-top: 6rem;
 }
 
@@ -446,7 +467,7 @@ footer {
 }
 
 .footer-container .nav-title {
-    margin: 0 37.5rem;
+    margin: 0 42rem;
 }
 
 .footer-container .nav-title h3 {
@@ -557,6 +578,7 @@ footer {
     .footer-container .nav-title {
         margin: 0rem;
         gap: .5rem;
+        margin-bottom: 1rem;
     }
 
     .footer-container .line {
@@ -572,14 +594,17 @@ footer {
         width: 100%;
         margin-top: 2rem;
     }
-    .deal-container-1 .deal ,.deal-container-3 .deal{
+
+    .deal-container-1 .deal,
+    .deal-container-3 .deal {
         margin-left: 2rem;
     }
+
     .deal-container-2 .deal {
         margin-right: 2rem;
     }
 
 
-     
+
 
 }
